--- a/Web/src/app/users/create-user/create-user.component.html
+++ b/Web/src/app/users/create-user/create-user.component.html
@@ -1,1 +1,36 @@
-<p>create-user works!</p>
+<div>
+  <div class="submit-form">
+    <div *ngIf="!submitted">
+      <div class="form-group">
+        <label for="firstName">First name</label>
+        <input type="text" class="form-control" id="firstName" required
+               [(ngModel)]="user.firstName" name="firstName" />
+      </div>
+
+      <div class="form-group">
+        <label for="lastName">Last name</label>
+        <input class="form-control" id="lastName" required
+               [(ngModel)]="user.lastName" name="lastName" />
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input class="form-control" id="email" required
+               [(ngModel)]="user.email" name="email" />
+      </div>
+
+      <div class="form-group">
+        <label for="phone">Phone</label>
+        <input class="form-control" id="phone" required
+               [(ngModel)]="user.phone" name="phone" />
+      </div>
+
+      <button (click)="saveUser()" class="btn btn-success">Submit</button>
+    </div>
+
+    <div *ngIf="submitted">
+      <h4>User was submitted successfully!</h4>
+      <button class="btn btn-success" (click)="restUser()">Add</button>
+    </div>
+  </div>
+</div>
