Create and details work

--- a/Web/src/app/users/create-user/create-user.component.html
+++ b/Web/src/app/users/create-user/create-user.component.html
@@ -20,9 +20,9 @@
       </div>
 
       <div class="form-group">
-        <label for="phone">Phone</label>
-        <input class="form-control" id="phone" required
-               [(ngModel)]="user.phone" name="phone" />
+        <label for="phoneNumber">Phone</label>
+        <input class="form-control" id="phoneNumber" required
+               [(ngModel)]="user.phoneNumber" name="phoneNumber" />
       </div>
 
       <button (click)="saveUser()" class="btn btn-success">Submit</button>
