--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -6,13 +6,12 @@
         <a routerLink="users" class="nav-link">Users</a>
       </li>
       <li class="nav-item">
-        <a routerLink="add" class="nav-link">Add</a>
+        <a routerLink="create" class="nav-link">Add</a>
       </li>
     </div>
   </nav>
 
   <div class="container mt-3">
-    <app-users-list></app-users-list>
     <router-outlet />
   </div>
 </div>
