--- a/Web/src/app/users/users-list/users-list.component.html
+++ b/Web/src/app/users/users-list/users-list.component.html
@@ -1,11 +1,11 @@
 <div class="list row">
   <div class="col-md-8">
     <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="Search by title" [(ngModel)]="title" />
+      <input type="text" class="form-control" placeholder="Search users" [(ngModel)]="search" />
       <div class="input-group-append">
-        <!--<button class="btn btn-outline-secondary" type="button" (click)="searchTitle()">
+        <button style="margin:10px;" class="btn btn-outline-secondary" type="button" (click)="refreshList()">
           Search
-        </button>-->
+        </button>
       </div>
     </div>
   </div>
@@ -13,9 +13,9 @@
     <h4>Users List</h4>
     <ul class="list-group">
       @if (paginatedUsers?.items) {
-      @for (item of paginatedUsers?.items; track item.id) {
-      <li class="list-group-item" [class.active]="item.id == userIndex" (click)="setActiveUser(item, item.id)">
-        {{ item.firstName }} {{ item.lastName }}
+      @for (user of paginatedUsers?.items; track user.id) {
+      <li class="list-group-item" [class.active]="user.id == userIndex" (click)="setActiveUser(user, user.id)">
+        {{ user.firstName }} {{ user.lastName }}
       </li>
       } @empty {
       <li>There are no items.</li>
@@ -24,7 +24,7 @@
     </ul>
 
   </div>
-  <!--<div class="col-md-6">
-    <app-tutorial-details [viewMode]="true" [currentTutorial]="currentTutorial"></app-tutorial-details>
-  </div>-->
+  <div class="col-md-6">
+    <app-user-details [viewMode] ="true" [currentUser]="currentUser"></app-user-details>
+  </div>
 </div>
