--- a/Web/src/app/users/user-details/user-details.component.html
+++ b/Web/src/app/users/user-details/user-details.component.html
@@ -1,5 +1,5 @@
-@if(viewMode){
-<div *ngIf="currentUser.id">
+<div *ngIf="viewMode; else editable">
+  @if(currentUser.id){
   <h4>User</h4>
   <div>
     <label>
@@ -25,18 +25,51 @@
     </label>
     {{ currentUser.phoneNumber }}
   </div>
+  <button class="badge badge-danger mr-2" (click)="onChangeViewMode()">Edit</button>
 
-  <a class="badge badge-warning" routerLink="/users/{{ currentUser.id }}">
-    Edit
-  </a>
+  <!--<a routerLink="/users/{{ currentUser.id }}">Edit</a>-->
+  }
+  @else{
+  <div>
+    <br />
+    <p>Please click on a user to show details...</p>
+  </div>
+  }
 </div>
-@if(currentUser.id == 0){
-<div>
-  <br />
-  <p>Please click on a user to show details...</p>
-</div>
-}
-}
+
+<ng-template #editable>
+  <div *ngIf="currentUser.id" class="edit-form">
+    <h4>User</h4>
+    <form>
+      <div class="form-group">
+        <label for="firstName">First name</label>
+        <input type="text" class="form-control" id="firstName" [(ngModel)]="currentUser.firstName" name="firstName" />
+      </div>
+      <div class="form-group">
+        <label for="lastName">Last name</label>
+        <input type="text" class="form-control" id="lastName" [(ngModel)]="currentUser.lastName" name="lastName" />
+      </div>
+      <div class="form-group">
+        <label for="email">Last name</label>
+        <input type="text" class="form-control" id="email" [(ngModel)]="currentUser.email" name="email" />
+      </div>
+      <div class="form-group">
+        <label for="phoneNumber">Phone number</label>
+        <input type="text" class="form-control" id="phoneNumber" [(ngModel)]="currentUser.phoneNumber" name="phoneNumber" />
+      </div>
+    </form>
+
+    <button class="badge badge-danger mr-2" (click)="deleteUser()">Delete</button>
+
+    <button type="submit" class="badge badge-success mb-2" (click)="updateUser()">Update</button>
+    <p>{{ message }}</p>
+  </div>
+
+  <div *ngIf="!currentUser.id">
+    <br />
+    <p>User cannot be found.</p>
+  </div>
+</ng-template>
 
 
 <!--<div *ngIf="viewMode; else editable">
