--- a/Web/src/app/users/create-user/create-user.component.html
+++ b/Web/src/app/users/create-user/create-user.component.html
@@ -1,36 +1,53 @@
-<div>
-  <div class="submit-form">
-    <div *ngIf="!submitted">
-      <div class="form-group">
-        <label for="firstName">First name</label>
-        <input type="text" class="form-control" id="firstName" required
-               [(ngModel)]="user.firstName" name="firstName" />
-      </div>
+<div class="profile-demo card-container">
+  <div *ngIf="!submitted" class="k-card custom-card">
+    <div class="card-row">
+      <div class="card-column">
+        <div class="avatar-title-container">
+          <div class="k-skeleton skeleton-avatar"></div>
+          <h4 class="k-h4">Create user</h4>
+        </div>
+        <div class="component-container">
+          <kendo-label text="First name">
+            <kendo-textbox id="firstName" required
+                           [(ngModel)]="user.firstName" name="firstName">
+            </kendo-textbox>
+          </kendo-label>
+        </div>
 
-      <div class="form-group">
-        <label for="lastName">Last name</label>
-        <input class="form-control" id="lastName" required
-               [(ngModel)]="user.lastName" name="lastName" />
-      </div>
+        <div class="component-container">
+          <kendo-label text="Last name">
+            <kendo-textbox id="lastName" required [(ngModel)]="user.lastName" name="lastName">
+            </kendo-textbox>
+          </kendo-label>
+        </div>
 
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input class="form-control" id="email" required
-               [(ngModel)]="user.email" name="email" />
-      </div>
+        <div class="component-container">
+          <kendo-label text="Email">
+            <kendo-textbox id="email" required [(ngModel)]="user.email" name="email"></kendo-textbox>
+          </kendo-label>
+        </div>
 
-      <div class="form-group">
-        <label for="phoneNumber">Phone</label>
-        <input class="form-control" id="phoneNumber" required
-               [(ngModel)]="user.phoneNumber" name="phoneNumber" />
-      </div>
+        <div class="component-container">
+          <kendo-label text="Phone number">
+            <kendo-textbox id="phoneNumber" required [(ngModel)]="user.phoneNumber" name="phoneNumber"></kendo-textbox>
+          </kendo-label>
+        </div>
 
-      <button (click)="saveUser()" class="btn btn-success">Submit</button>
+        <div class="component-container">
+          <button kendoButton themeColor="success" [look]="'outline'" (click)="saveUser()">Submit</button>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <div *ngIf="submitted">
-      <h4>User was submitted successfully!</h4>
-      <button class="btn btn-success" (click)="restUser()">Add</button>
+  <div *ngIf="submitted" class="card-row">
+    <div class="card-column">
+      <div class="component-container">
+        <div>
+          <h4>User was submitted successfully!</h4>
+          <button kendoButton themeColor="success" [look]="'outline'" (click)="restUser()">Add another</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
