--- a/Web/src/app/users/user-details/user-details.component.html
+++ b/Web/src/app/users/user-details/user-details.component.html
@@ -38,30 +38,49 @@
 <ng-template #editable>
   <div *ngIf="currentUser.id" class="edit-form">
     <h4>Edit user details</h4>
-    <form>
-      <div class="form-group">
-        <label for="firstName">First name</label>
-        <input type="text" class="form-control" id="firstName" [(ngModel)]="currentUser.firstName" name="firstName" />
-      </div>
-      <div class="form-group">
-        <label for="lastName">Last name</label>
-        <input type="text" class="form-control" id="lastName" [(ngModel)]="currentUser.lastName" name="lastName" />
-      </div>
-      <div class="form-group">
-        <label for="email">Last name</label>
-        <input type="text" class="form-control" id="email" [(ngModel)]="currentUser.email" name="email" />
-      </div>
-      <div class="form-group">
-        <label for="phoneNumber">Phone number</label>
-        <input type="text" class="form-control" id="phoneNumber" [(ngModel)]="currentUser.phoneNumber" name="phoneNumber" />
-      </div>
-    </form>
+    <div class="card-row">
+      <div class="card-column">
+        <div class="avatar-title-container">
+          <div class="k-skeleton skeleton-avatar"></div>
+        </div>
+        <div class="component-container">
+          <kendo-label text="First name">
+            <kendo-textbox id="firstName" required
+                           [(ngModel)]="currentUser.firstName" name="firstName">
+            </kendo-textbox>
+          </kendo-label>
+        </div>
 
-    <button kendoButton themeColor="primary" [look]="'outline'" (click)="onDeleteUser()">Delete</button>
+        <div class="component-container">
+          <kendo-label text="Last name">
+            <kendo-textbox id="lastName" required [(ngModel)]="currentUser.lastName" name="lastName">
+            </kendo-textbox>
+          </kendo-label>
+        </div>
 
-    <button kendoButton themeColor="success" [look]="'outline'" (click)="updateUser()">Update</button>
+        <div class="component-container">
+          <kendo-label text="Email">
+            <kendo-textbox id="email" required [(ngModel)]="currentUser.email" name="email"></kendo-textbox>
+          </kendo-label>
+        </div>
 
-    <button kendoButton [look]="'outline'" (click)="onCancel()">Cancel</button>
+        <div class="component-container">
+          <kendo-label text="Phone number">
+            <kendo-textbox id="phoneNumber" required [(ngModel)]="currentUser.phoneNumber" name="phoneNumber"></kendo-textbox>
+          </kendo-label>
+        </div>
+
+        <div class="component-container">
+
+          <button kendoButton themeColor="primary" [look]="'outline'" (click)="onDeleteUser()">Delete</button>
+
+          <button kendoButton themeColor="success" [look]="'outline'" (click)="updateUser()">Update</button>
+
+          <button kendoButton [look]="'outline'" (click)="onCancel()">Cancel</button>
+        </div>
+      </div>
+    </div>
+
 
     <p>{{ message }}</p>
   </div>
