Kendo client side pagination and filtration

--- a/Web/src/app/users/create-user/create-user.component.html
+++ b/Web/src/app/users/create-user/create-user.component.html
@@ -1,5 +1,5 @@
 <div class="profile-demo card-container">
-  <div *ngIf="!submitted" class="k-card custom-card">
+  <div *ngIf="!submitted" class="k-card custom-card submit-form">
     <div class="card-row">
       <div class="card-column">
         <div class="avatar-title-container">
