--- a/Web/src/app/users/users-list/users-list.component.html
+++ b/Web/src/app/users/users-list/users-list.component.html
@@ -1,4 +1,4 @@
-<div class="list row">
+<div class="row">
   <div class="col-md-8">
     <div class="input-group mb-3">
       <input type="text" class="form-control" placeholder="Search users" [(ngModel)]="search" />
@@ -9,60 +9,73 @@
       </div>
     </div>
   </div>
-  <div class="col-md-6">
-    <h4>Users List</h4>
-      @if (paginatedUsers?.items) {
-      <kendo-grid [data]="gridData" [navigable]="true" [selectable]="{ mode: 'single' }">
-        <kendo-grid-column field="firstName" title="First name"></kendo-grid-column>
-        <kendo-grid-column field="lastName" title="Last name"></kendo-grid-column>
-        <kendo-grid-column>
-          <ng-template kendoGridCellTemplate let-dataItem>
-            <button type="button" kendoButton [look]="'outline'" (click)="showDetails($event, dataItem)">Show details</button>
-          </ng-template>
-        </kendo-grid-column>
-      </kendo-grid>
-      }
-      @else
-      {
-      <h1>There are no items.</h1>
-      }
-
+  <h4>Users List</h4>
+  @if (gridView) {
+  <div class="example-config" style="width:600px;">
+    <div class="inputs-row">
+      <div class="input-wrapper">
+        <kendo-label [for]="pagerType" text="Type of the pager:"></kendo-label>
+        <kendo-dropdownlist #pagerType [data]="pagerTypes" [(value)]="type"></kendo-dropdownlist>
+      </div>
+      <div class="input-wrapper">
+        <kendo-label [for]="count" text="Maximum number of buttons:"></kendo-label>
+        <kendo-numerictextbox #count format="n0" [(value)]="buttonCount"></kendo-numerictextbox>
+      </div>
+    </div>
+    <div class="inputs-row">
+      <div class="input-wrapper">
+        <input #showinfo type="checkbox" kendoCheckBox [(ngModel)]="info" />
+        <kendo-label [for]="showinfo" text="Show info"></kendo-label>
+      </div>
+      <div class="input-wrapper">
+        <input #size type="checkbox" kendoCheckBox [(ngModel)]="pageSizes" />
+        <kendo-label [for]="size" text="Show page sizes"></kendo-label>
+      </div>
+      <div class="input-wrapper">
+        <input #buttons type="checkbox" kendoCheckBox [(ngModel)]="previousNext" />
+        <kendo-label [for]="buttons" text="Show previous / next buttons"></kendo-label>
+      </div>
+    </div>
+    <div class="inputs-row">
+      <div class="input-wrapper">Position:</div>
+      <div class="input-wrapper">
+        <input #positionTop type="radio" kendoRadioButton name="position" value="top" [(ngModel)]="position" />
+        <kendo-label [for]="positionTop" text="Top">
+        </kendo-label>
+      </div>
+      <div class="input-wrapper">
+        <input #positionBottom type="radio" kendoRadioButton name="position" value="bottom" [(ngModel)]="position" />
+        <kendo-label [for]="positionBottom" text="Bottom"></kendo-label>
+      </div>
+      <div class="input-wrapper">
+        <input #positionBoth type="radio" kendoRadioButton name="position" value="both" [(ngModel)]="position" />
+        <kendo-label [for]="positionBoth" text="Both"></kendo-label>
+      </div>
+    </div>
   </div>
+  <kendo-grid [kendoGridBinding]="gridView"
+              [navigable]="true" [selectable]="{ mode: 'single' }"
+              [filterable]="true" [pageSize]="pageSize"
+              [skip]="skip" [pageable]="{ buttonCount: buttonCount, info: info, type: type,
+              pageSizes: pageSizes, previousNext: previousNext, position: position }"
+              [height]="500">
+    <kendo-grid-column field="firstName" title="First name" [width]="130"></kendo-grid-column>
+    <kendo-grid-column field="lastName" title="Last name" [width]="130"></kendo-grid-column>
+    <kendo-grid-column field="email" title="Email" [width]="130"></kendo-grid-column>
+    <kendo-grid-column field="phoneNumber" title="Phone number" [width]="130"></kendo-grid-column>
+    <kendo-grid-column [width]="130">
+      <ng-template kendoGridCellTemplate let-dataItem>
+        <button type="button" kendoButton [look]="'outline'" (click)="showDetails($event, dataItem)">Show details</button>
+      </ng-template>
+    </kendo-grid-column>
+  </kendo-grid>
+  }
+  @else
+  {
+  <h1>There are no items.</h1>
+  }
+
   <div class="col-md-6">
     <app-user-details [viewMode]="true" [itemsCount]="itemsCount" [currentUser]="currentUser"></app-user-details>
   </div>
 </div>
-
-
-
-<!--<ng-template kendoGridDetailTemplate let-dataItem>
-  <strong>Manager:</strong> {{ dataItem.id }}
-</ng-template>-->
-<!--<kendo-grid-column title="Custom">
-  <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
-    <button type="button" class="k-button" (click)="showDetails($event, dataItem)">Open Popup</button>
-  </ng-template>
-</kendo-grid-column>-->
-<!--<kendo-grid [data]="gridData" [selectable]="{ mode: 'single' }" [navigable]="true" [height]="300">-->
-<!--<kendo-grid-checkbox-column [width]="40"></kendo-grid-checkbox-column>-->
-<!--<kendo-grid-column field="ProductName" title="Product Name"></kendo-grid-column>
-  <kendo-grid-column field="UnitsInStock" title="Units In Stock"></kendo-grid-column>
-  <kendo-grid-column field="UnitsOnOrder" title="Units On Order"></kendo-grid-column>
-  <kendo-grid-column field="ReorderLevel" title="Reorder Level"></kendo-grid-column>
-</kendo-grid>-->
-<!--<kendo-grid [data]="gridData" [height]="300" [selectable]="selectableSettings"
-            [cellSelected]="isCellSelected">
-  <kendo-grid-column field="ProductName" title="Product Name"></kendo-grid-column>
-  <kendo-grid-column field="UnitsInStock" title="Units In Stock"></kendo-grid-column>
-  <kendo-grid-column field="UnitsOnOrder" title="Units On Order"></kendo-grid-column>
-  <kendo-grid-column field="ReorderLevel" title="Reorder Level"></kendo-grid-column>
-</kendo-grid>-->
-<!--<kendo-popup style="width: calc(100% - 88px); z-index: 10002;"
-             popupClass="custom-popup"
-             [anchor]="anchorElement"
-             *ngIf="show">
-  Details for: {{ currentUser.firstName }}... custom content
-  <span class="k-icon k-i-close-outline k-i-x-outline"
-        style="position: absolute; right: 0;"
-        (click)="closePopup()"></span>
-</kendo-popup>-->
