--- a/Web/src/app/users/create-user/create-user.component.html
+++ b/Web/src/app/users/create-user/create-user.component.html
@@ -8,46 +8,56 @@
         </div>
         <div class="component-container">
           <kendo-label text="First name">
-            <kendo-textbox id="firstName" required
-                           [(ngModel)]="user.firstName" name="firstName">
+            <kendo-textbox #firstName="ngModel" id="firstName" required [(ngModel)]="user.firstName" name="firstName">
             </kendo-textbox>
           </kendo-label>
-        </div>
+          <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)" style="color:red">
+            <b>First name required</b>
+          </div>
 
-        <div class="component-container">
-          <kendo-label text="Last name">
-            <kendo-textbox id="lastName" required [(ngModel)]="user.lastName" name="lastName">
-            </kendo-textbox>
-          </kendo-label>
-        </div>
+          <div class="component-container">
+            <kendo-label text="Last name">
+              <kendo-textbox #lastName="ngModel" id="lastName" required [(ngModel)]="user.lastName" name="lastName">
+              </kendo-textbox>
+            </kendo-label>
+            <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)" style="color:red">
+              <b>Last name required</b>
+            </div>
+          </div>
 
-        <div class="component-container">
-          <kendo-label text="Email">
-            <kendo-textbox id="email" required [(ngModel)]="user.email" name="email"></kendo-textbox>
-          </kendo-label>
-        </div>
+          <div class="component-container">
+            <kendo-label text="Email">
+              <kendo-textbox #email="ngModel" id="email" required [(ngModel)]="user.email" name="email"></kendo-textbox>
+            </kendo-label>
+            <div *ngIf="email.invalid && (email.dirty || email.touched)" style="color:red">
+              <b>Email required</b>
+            </div>
+          </div>
 
-        <div class="component-container">
-          <kendo-label text="Phone number">
-            <kendo-textbox id="phoneNumber" required [(ngModel)]="user.phoneNumber" name="phoneNumber"></kendo-textbox>
-          </kendo-label>
-        </div>
+          <div class="component-container">
+            <kendo-label text="Phone number">
+              <kendo-textbox #phoneNumber="ngModel" id="phoneNumber" required [(ngModel)]="user.phoneNumber" name="phoneNumber"></kendo-textbox>
+            </kendo-label>
+            <div *ngIf="phoneNumber.invalid && (phoneNumber.dirty || phoneNumber.touched)" style="color:red">
+              <b>Phone number required</b>
+            </div>
+          </div>
 
+          <div class="component-container">
+            <button kendoButton themeColor="success" [look]="'outline'" (click)="saveUser()">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="submitted" class="card-row">
+      <div class="card-column">
         <div class="component-container">
-          <button kendoButton themeColor="success" [look]="'outline'" (click)="saveUser()">Submit</button>
+          <div>
+            <h4>User was submitted successfully!</h4>
+            <button kendoButton themeColor="success" [look]="'outline'" (click)="restUser()">Add another</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
-  <div *ngIf="submitted" class="card-row">
-    <div class="card-column">
-      <div class="component-container">
-        <div>
-          <h4>User was submitted successfully!</h4>
-          <button kendoButton themeColor="success" [look]="'outline'" (click)="restUser()">Add another</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
