Unite create and edit in one place

--- a/Web/src/app/users/create-user/create-user.component.html
+++ b/Web/src/app/users/create-user/create-user.component.html
@@ -4,7 +4,9 @@
       <div class="card-column">
         <div class="avatar-title-container">
           <div class="k-skeleton skeleton-avatar"></div>
-          <h4 class="k-h4">Create user</h4>
+          <h4 *ngIf="!editMode" class="k-h4">Create user</h4>
+          <h4 *ngIf="editMode" class="k-h4">Update user</h4>
+
         </div>
         <div class="component-container">
           <kendo-label text="First name">
@@ -36,9 +38,16 @@
 
           </div>
 
-          <div class="component-container">
+          <div *ngIf="!editMode" class="component-container">
             <button kendoButton themeColor="success" [look]="'outline'" (click)="saveUser()">Submit</button>
           </div>
+
+          <div *ngIf="editMode" class="component-container">
+            <button kendoButton themeColor="primary" [look]="'outline'" (click)="onDeleteUser()">Delete</button>
+            <button kendoButton themeColor="success" [look]="'outline'" (click)="saveUser()">Update</button>
+            <button kendoButton [look]="'outline'" (click)="onCancel()">Cancel</button>
+          </div>
+
         </div>
       </div>
     </div>
@@ -46,10 +55,16 @@
     <div *ngIf="submitted" class="card-row">
       <div class="card-column">
         <div class="component-container">
-          <div>
-            <h4>User was submitted successfully!</h4>
+          <div *ngIf="!editMode">
+            <h4>User is submitted successfully!</h4>
             <button kendoButton themeColor="success" [look]="'outline'" (click)="restUser()">Add another</button>
           </div>
+
+          <div *ngIf="editMode">
+            <h4>User updated successfully!</h4>
+            <button kendoButton themeColor="success" [look]="'outline'" (click)="goToList()">Go to list</button>
+          </div>
+
         </div>
       </div>
     </div>
